Modificasiones para pag de github

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--Icono del titulo-->
-    <link rel="icon" href="/asset/img/pulpo.png">
+    <link rel="icon" href="./asset/img/pulpo.png">
     <!--Css-->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>EpicLigth</title>
 </head>
 
@@ -41,7 +41,7 @@
                     <i class="fa-solid fa-image"></i>
                 </div>
                 <div class="img_perfil">
-                    <a href="#"><img src="/asset/img/perfil.png" alt="foto perfil"></a>
+                    <a href="#"><img src="./asset/img/perfil.png" alt="foto perfil"></a>
                 </div>
 
 
@@ -172,7 +172,7 @@
 
     <main class="main_content">
         <div class="main_inicio gradiante">
-            <img src="/asset/img/pulpo.png" alt="imagen del inicio">
+            <img src="./asset/img/pulpo.png" alt="imagen del inicio">
             <p>Epicligth, un lugar donde las historias brillan intensamente</p>
         </div>
         <div class="topGod">
