modif de js para pag de github

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         </a>
                         
                     </div>
-                    <div class="cont_segir2">
+                    <div class="cont_segir">
                         <a href="#" class="cont_segir_a">
                             <img src="./asset/img/warlockofthemagusworld.jpeg" class="img_cont_nuevo" alt="algo">
                         </a>
@@ -311,8 +311,8 @@
     </div>
 
     <script src="./js/login.js" type="module"></script>
-    <script src="/js/menu.js" type="module"></script>
-    <script src="/js/main.js"></script>
+    <script src="./js/menu.js" type="module"></script>
+    <script src="./js/main.js" type="module"></script>
 
 </body>
 
