--- a/index.html
+++ b/index.html
@@ -254,13 +254,13 @@
                 <div class="input_box_ingresar">
                     <span class="icono"><i class="fa-solid fa-at"></i></span>
                     <input class="inputIngreso" type="email" name="email" required id="email"
-                        placeholder="Correo electrónico" title="Introduce tu dirección de correo electrónico">
+                        placeholder="" title="Introduce tu dirección de correo electrónico">
                     <label for="email">Email</label>
                 </div>
                 <div class="input_box_ingresar">
                     <span class="icono"><i class="fa-solid fa-lock"></i></span>
                     <input class="inputIngreso" type="password" name="password" required id="contraseña"
-                        placeholder="Contraseña" title="Introduce tu contraseña">
+                        placeholder="" title="Introduce tu contraseña">
                     <label for="contraseña">Contraseña</label>
                 </div>
                 <div class="recuerdame">
@@ -279,19 +279,19 @@
             <form action="#">
                 <div class="input_box_ingresar">
                     <span class="icono"><i class="fa-solid fa-user"></i></span>
-                    <input class="inputRegistro" name="nombreUs" type="text" required placeholder="Nombre de Usuario"
+                    <input class="inputRegistro" name="nombreUs" type="text" required placeholder=""
                         title="Introduce tu nombre de usuario">
                     <label for="nombreUs">Nombre de Usuario</label>
                 </div>
                 <div class="input_box_ingresar">
                     <span class="icono"><i class="fa-solid fa-at"></i></span>
-                    <input class="inputRegistro" name="emailUs" type="email" required placeholder="Correo electrónico"
+                    <input class="inputRegistro" name="emailUs" type="email" required placeholder=""
                         title="Introduce tu dirección de correo electrónico">
                     <label for="emailUs">Email</label>
                 </div>
                 <div class="input_box_ingresar">
                     <span class="icono"><i class="fa-solid fa-lock"></i></span>
-                    <input class="inputRegistro" name="passwordUs" type="password" required placeholder="Contraseña"
+                    <input class="inputRegistro" name="passwordUs" type="password" required placeholder=""
                         title="Introduce tu contraseña">
                     <label for="passwordUs">Contraseña</label>
                 </div>
